# dj-zarr-codecs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  tests.yml
docs/: api.md  index.md
src/dj_zarr_codecs/: __init__.py  _version.py  codecs.py
tests/: conftest.py  test_codec.py  test_codecs.py  test_package.py
